s/textarea/div/ so we can do linking
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1434304 13f79535-47bb-0310-9956-ffa450edef68

--- a/www/htdocs/cast-style.css
+++ b/www/htdocs/cast-style.css
@@ -2,3 +2,4 @@ textarea { width: 80%; height: 50% }
 h1 { font-size: 14pt }
 h2 { font-size: 12pt }
 body { font-size: 10pt }
+#issue {text-align:left; height:50%; width:80%; overflow:auto; border:solid 1px}
