Add feature for editing STV elections
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1668424 13f79535-47bb-0310-9956-ffa450edef68

--- a/pytest/www/htdocs/css/steve_interactive.css
+++ b/pytest/www/htdocs/css/steve_interactive.css
@@ -402,6 +402,11 @@ body, html {
 }
 
 
+.formbox .candidateEditList {
+  min-height: 32px;
+  width: 1000px;
+}
+
 .formbox .keyvaluepair {
   min-height: 32px;
   min-width: 700px;
