--- a/www/htdocs/css/steve_interactive.css
+++ b/www/htdocs/css/steve_interactive.css
@@ -402,6 +402,11 @@ body, html {
 }
 
 
+.formbox .candidateEditList {
+  min-height: 32px;
+  width: 1000px;
+}
+
 .formbox .keyvaluepair {
   min-height: 32px;
   min-width: 700px;
