fix border color
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1668472 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/css/steve_interactive.css
+++ b/pysteve/www/htdocs/css/steve_interactive.css
@@ -80,7 +80,7 @@ p {
 
 .btn-black {
   background: #888888 !important;
-  border: #bd351e solid 1px;
+  border: #aaaaaa solid 1px;
   border-radius: 3px;
   color: #fff !important;
   display: inline-block;
