--- a/www/htdocs/css/steve_interactive.css
+++ b/www/htdocs/css/steve_interactive.css
@@ -80,7 +80,7 @@ p {
 
 .btn-black {
   background: #888888 !important;
-  border: #bd351e solid 1px;
+  border: #aaaaaa solid 1px;
   border-radius: 3px;
   color: #fff !important;
   display: inline-block;
