Add page and functionality for doing single issue YNA voting.
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1668839 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/css/steve_interactive.css
+++ b/pysteve/www/htdocs/css/steve_interactive.css
@@ -339,6 +339,22 @@ pre {
     position: static;
 }
 
+kbd {
+  font-weight: bold;
+  color: #369;
+  font-size: 16px;
+}
+
+
+.statement {
+  border: 1px dotted #333;
+  background: linear-gradient(to bottom, #eeeecc 0%,#f2f6fc 100%);
+  overflow: auto;
+  max-width: 800px;
+  min-height: 100px;
+  max-height: 400px;
+}
+
 .statement_marker a {
     color: #fff;
 }
