Let's try an online monitoring of elections. WITH BIG RED LETTERS
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1669560 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/css/steve_interactive.css
+++ b/pysteve/www/htdocs/css/steve_interactive.css
@@ -258,6 +258,15 @@ pre {
   word-wrap: break-word;
   white-space: pre-wrap;
 }
+
+.monitor_details {
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  font-family: monospace;
+  background: #FFD;
+  border: 1px dotted #333;
+}
+
 .modal-header,
 .modal-footer {
   padding: 10px 20px;
