disable this for now, it's ruining input fields
git-svn-id: https://svn.apache.org/repos/asf/steve/trunk@1729573 13f79535-47bb-0310-9956-ffa450edef68

--- a/pysteve/www/htdocs/css/steve_interactive.css
+++ b/pysteve/www/htdocs/css/steve_interactive.css
@@ -441,8 +441,9 @@ body, html {
 }
 
 * {
-    -webkit-user-select: none; 
+    /*-webkit-user-select: none; */
 }
+
 
 #ballot {
   list-style: none;
