--- a/www/htdocs/css/steve_interactive.css
+++ b/www/htdocs/css/steve_interactive.css
@@ -441,8 +441,9 @@ body, html {
 }
 
 * {
-    -webkit-user-select: none; 
+    /*-webkit-user-select: none; */
 }
+
 
 #ballot {
   list-style: none;
