--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/steve.css">
+    <link rel="stylesheet" href="theme/css/steve.css">
     <title>Apache STeVe</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
             <p>Curabitur venenatis dui eget nunc fermentum placerat. Fusce semper turpis eu cursus vulputate. Duis non ex ut metus luctus porttitor quis eget magna. Mauris tristique pellentesque tortor, congue semper justo lacinia euismod. In luctus fermentum metus in posuere. Donec auctor ipsum vel tortor lobortis lobortis. Proin gravida purus mi, vel ornare nibh congue eu. Phasellus ipsum diam, vestibulum eget pharetra non, eleifend non sem.</p>
             <br/>
             <p style="text-align: center">
-                <img src="images/tat.png" style="width: 250px; margin:0 auto;">
+                <img src="theme/images/tat.png" style="width: 250px; margin:0 auto;">
             </p>
         </div>
         <footer>
