--- a/theme/static/css/steve.css
+++ b/theme/static/css/steve.css
@@ -8,7 +8,7 @@ html, body {
 #main {
     width: 1200px;
     min-height: 100%;
-    background-image: url(../images/front-splash.png);
+    background-image: url(/images/front-splash.png);
     background-position-y: 48px;
     background-repeat: no-repeat;
     margin: 0 auto;
@@ -21,7 +21,7 @@ html, body {
     text-align: right;
     width: calc(100% - 20px);
     margin-right: 20px;
-    background-image: url(../images/logo-bright.png);
+    background-image: url(/images/logo-bright.png);
     background-size: 100px;
     background-repeat: no-repeat;
     background-position: 5px 5px;
