--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -6,7 +6,7 @@
     <title>Apache STeVe</title>
 </head>
 <body>
-    <div id="main">
+    <div id="main_splash">
         <nav>
             <ul>
                 <li><a href=".">Home</a></li>
